style.css
html,
body,
#wrapper {
	height: 100%;
	font-family: sans-serif;
}

#wrapper {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
}

#header {
	margin: 10px 0px;
	display: flex;
	flex-direction: column;
}

#header * {
	text-align: center;
	margin: 3px 0px;
}

#highscore {
	font-size: 1.5em;
	margin: 10px 0px 30px 0px;
}

h1 {
	font-size: 2.5em;
}

a,
a:active,
a:hover,
a:focus {
	color: inherit;
}

#answer {
	text-align: center;
	font-size: 4.5em;
	margin: 10px 0px;
}

#options {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	gap: 1em;
	margin: 10px 0px;
}

.option {
	border: none;
	margin: 0;
	padding: 0;
	font: inherit;
	line-height: normal;
	-webkit-font-smoothing: inherit;
	-moz-osx-font-smoothing: inherit;
	-webkit-appearance: none;
	outline: none;
	width: 100px;
	height: 100px;
	display: flex;
	align-items: center;
	justify-content: center;
	border-radius: 50%;
	cursor: pointer;
	transition: all 0.25s ease-in-out;
	font-size: 2em;
}

.option[disabled] {
	cursor: not-allowed;
	transform: scale(0.9);
	font-size: 1em;
}

@media (hover) {
	.option:not([disabled]):hover,
	.option:not([disabled]):focus {
		transform: scale(1.25);
	}
}

#score {
	font-size: 2.5em;
}

#lives {
	font-size: 2.5em;
	font-weight: bold;
	color: #ff0000;
}

.button {
	border: none;
	margin: 0;
	padding: 10px 20px;
	border-radius: 5px;
	background-color: #eeeeee;
	color: black;
	font: inherit;
	line-height: normal;
	-webkit-font-smoothing: inherit;
	-moz-osx-font-smoothing: inherit;
	-webkit-appearance: none;
	cursor: pointer;
	transition: background-color 0.25s ease-in-out;
}

.button:not(.active):hover {
	background-color: #dddddd;
}

.active {
	background-color: #4caf50;
	color: #ffffff;
	cursor: not-allowed;
}

.shake {
	-webkit-animation: shake 1s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
	animation: shake 1s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
}

@-webkit-keyframes shake {
	10%,
	90% {
		transform: translate3d(-1px, 0, 0);
	}

	20%,
	80% {
		transform: translate3d(2px, 0, 0);
	}

	30%,
	50%,
	70% {
		transform: translate3d(-4px, 0, 0);
	}

	40%,
	60% {
		transform: translate3d(4px, 0, 0);
	}
}

@keyframes shake {
	10%,
	90% {
		transform: translate3d(-1px, 0, 0);
	}

	20%,
	80% {
		transform: translate3d(2px, 0, 0);
	}

	30%,
	50%,
	70% {
		transform: translate3d(-4px, 0, 0);
	}

	40%,
	60% {
		transform: translate3d(4px, 0, 0);
	}
}

@media (prefers-color-scheme: dark) {
	body {
		background-color: #333333;
		color: white;
	}

	.button:not(.active) {
		background-color: #555555;
		color: white;
	}

	.button:not(.active):hover {
		background-color: #777777;
	}
}

